<resources>
    <string name="app_name">Food Recipe App</string>
    <string name="search_your_recipes">Search Your Recipes…</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="dot_loading">...</string>
    <string name="Ingredients">INGREDIENTS</string>
    <string name="youtube">YOUTUBE</string>
    <string name="source">SOURCE</string>
    <string name="favorite">Favorite</string>
    <string name="banner_ads_id">ca-app-pub-7622707640153634/8903034875</string>
    <string name="interstitial_ads_id">ca-app-pub-7622707640153634/9090737130</string>
    <string name="interstitial_video_ads_id">ca-app-pub-7622707640153634/9554126783</string>
    <string name="input_meal_name">Nhập tên món ăn</string>

    <string name="action_home">Home</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_personal">Personal</string>
    <string name="action_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
